# grafly

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/analyze/: Cargo.toml
crates/analyze/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: install.rs  install_mcp.rs  main.rs  skill.rs  target.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/scan/: Cargo.toml
crates/scan/src/: common.rs  go.rs  java.rs  javascript.rs  lib.rs  manifest.rs  python.rs  rust_lang.rs  typescript.rs
src/: lib.rs
