[package]
name    = "grafly-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grafly"
path = "src/main.rs"

[dependencies]
grafly-core    = { workspace = true }
grafly-scan    = { workspace = true }
grafly-cluster = { workspace = true }
grafly-analyze = { workspace = true }
grafly-report  = { workspace = true }
grafly-export  = { workspace = true }

clap       = { workspace = true }
anyhow     = { workspace = true }
serde_json = { workspace = true }
